Stabilize runtime-core seam checks